--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,9 @@
 /* Global */
 
+html {
+	font-size: 100%;
+}
+
 body {
 	font-family: 'Open Sans', sans-serif;
 	font-weight: 400;
@@ -11,7 +15,7 @@ img {
 	max-width: 100%;
 }
 a:link {
-	color: #f68f67;
+	color: #D18080;
 	text-decoration: none;
 }
 a:hover {
@@ -23,6 +27,9 @@ a:visited {
 	text-decoration: none;
 }
 
+ul {
+	list-style: none outside none;
+}
 
 .center {
 	margin-right:auto; margin-left:auto;
@@ -31,22 +38,47 @@ a:visited {
 
 /* Navigation */
 
-.menu {
-	position:fixed;
-	top:0px;
-	width:100%; 
-	height:auto; 
+.navbar {
 	background-color:#565C5C;
-	z-index:100;
-	color: #FFF;
-	padding-bottom: 20px;
 }
-#logo {
-	text-align: center;
-	margin: 18px 0 5px 0;
+
+.navbar-default .navbar-brand, .navbar-default .navbar-nav > li > a {
+    color: #E8E8E8;
+}
+
+.navbar-brand {
 	font-family: "Hoefler Text", "Baskerville old face", Garamond, "Times New Roman", serif;
 	font-size: 2em;
 }
+
+.navbar-brand span {
+	padding: 0px 10px;
+}
+
+.navbar-nav > li{
+	height: 60px;
+}
+
+.navbar-nav > li a{
+	padding: 20px;;
+}
+
+.navbar-nav.navbar-right:last-child {
+    margin-right: 0px;
+}
+
+.navbar-default .navbar-nav > .active > a, .navbar-default .navbar-nav > .active > a:hover, .navbar-default .navbar-nav > .active > a:focus {
+    background-color:#565C5C;
+    color: #D18080;
+    font-weight: bold;
+    letter-spacing: 1px;
+}
+
+.navbar-default .navbar-nav > li > a:hover, .navbar-default .navbar-nav > li > a:focus, .navbar-default .navbar-brand:hover, .navbar-default .navbar-brand:focus  {
+	color: #FFFFFF;
+}
+
+
 .flipped {
     -moz-transform: scaleX(-1);
     -o-transform: scaleX(-1);
@@ -56,36 +88,25 @@ a:visited {
     -ms-filter: "FlipH";
 }
 
-#logo img {
-	position: relative;
-	top: 6px;
-}
-#nav {
-	text-align: right;
-	margin: 30px 0 0 0;
-}
-.navigation{
-	float: right;
-	list-style: none;
-	margin: 0;
-}
-.navigation li{
-	float: left;
-	padding:0 0 0 50px;
-}
-.navigation li:hover{
-	cursor:pointer;
-	color: #a9d3d0;
+.navbar-default .navbar-toggle:hover, .navbar-default .navbar-toggle:focus {
+    background-color: #DDDDDD;
 }
 
-.navigation .active{
-	cursor:pointer;
-	color: #FF6060;
-	font-weight:bold;
+.navbar-default .navbar-toggle:hover, .navbar-default .navbar-toggle:focus {
+    background-color: rgba(0, 0, 0, 0);
 }
 
+@media screen and (max-width: 380px) {
 
-
+	.navbar-brand img {
+		height: 15px;
+		width: 41px;
+	}
+	
+	.navbar-brand span {
+		font-size: .7em;
+	}
+}
 
 /* General Slides */ 
 
@@ -174,10 +195,14 @@ a:visited {
     text-transform: uppercase;
     border-bottom: 3px solid #FFFFFF;
     border-top: 3px solid #FFFFFF;
-    margin: 30px 0px 16px 0px;
+    margin: 1px 0px 16px 0px;
     text-align: center;
     
     display: table;
+}
+
+#desc img {
+	margin-bottom: 50px;
 }
 
 
@@ -196,7 +221,7 @@ a:visited {
 	font-weight: 700;
 	font-family: 'Roboto Condensed', Helvetica, Arial, sans-serif;
 	line-height: 120px;
-	margin: 10px 0 20px 0;
+	margin: 20px 0 30px 0;
 }
 #services h2 {
 	font-size: 2em;
@@ -206,8 +231,12 @@ a:visited {
 	font-weight: 400;
 }
 
-#services #content {
+#services .container {
 	text-align: center;
+}
+
+#services .row {
+	margin-bottom: 80px;
 }
 
 #services #our {
@@ -236,16 +265,21 @@ a:visited {
 	left: 0;
 }
 
+#services ul{
+	padding: 0px;
+}
+
 .serviceItem {
-  display: inline-block;
-  width: 230px;
-  height: 230px;
-  background-color: #FFF;
-  margin: 20px;
   text-align: center;
   color: #565C5C;
-  padding: 20px;
-  margin-top: 90px;
+  margin-bottom: 20px;
+}
+
+.serviceItem div {
+	padding: 20px;
+	background-color: #FFF;
+	border-radius: 0 15px;
+    box-shadow: -3px -3px 0 3px #999999, 3px 3px 0 3px #333333;
 }
 
 .serviceItem h3{
@@ -260,21 +294,45 @@ a:visited {
 	font-family: "Segoe UI", Frutiger, "Frutiger Linotype", "Dejavu Sans", "Helvetica Neue", Arial, sans-serif;
 }
 
+@media screen and (max-width: 656px) {
+
+	#services h1 {
+	    font-size: 5em;
+	}
+}
+
+@media screen and (max-width: 992px) {
+	
+	#services {
+		padding-top: 50px;
+		padding-bottom: 50px;
+	}
+
+	#services h1 {
+	    font-size: 4.2em;
+	}
+	
+	#services #are .right, #services #are .left {
+		display: none;
+	} 
+}
+
 /* Gallery */
 
 #gallery{
 	background-color:#A20A06;
 	color:#ffffff;
+	padding-top: 100px;
 }
 #gallery h1 {
 	font-size: 3.8em;
 	letter-spacing: 2px;
-	line-height: 0px;
 	color:#ffffff;
 	font-weight: 700;
 	text-shadow: 3px 3px 3px #5A0503;
 	font-family: "Hoefler Text", "Baskerville old face", Garamond, "Times New Roman", serif;
-	margin-left: 60px;
+	margin-bottom: 100px;
+	text-align: center;
 }
 #gallery h2 {
 	font-size: 2em;
@@ -284,29 +342,28 @@ a:visited {
 	font-weight: 400;
 }
 
+#gallery ul {
+	padding: 0px;
+}
+
 .galleryItem {
-	display: inline-block;
-	position: relative;
-  width: 250px;
-  height: 250px;
-  padding: 0;
-	margin: 20px;
-	border: solid 10px #fff;
-	
-	-webkit-box-shadow:  0px 0px 5px 0px rgba(0, 0, 0, 0.25);
-	box-shadow:  0px 0px 5px 0px rgba(0, 0, 0, 0.25);
+	margin-bottom: 20px;
+	text-align: center;
 }
 
 .galleryItem img {
-	width: 250px;
-	height: 250px;
+	width: 100%;
+}
+
+.galleryItem a {
+	border: solid 10px #fff;
+	-webkit-box-shadow:  0px 0px 5px 0px rgba(0, 0, 0, 0.25);
+	box-shadow:  1px 1px 5px 0px rgba(0, 0, 0, 0.65);
 }
 
 .caption {
 	position: relative;
 	display: inline-block;
-	width: 250px;
-	height: 250px;
 	z-index: 10;
 }
 
@@ -315,7 +372,6 @@ a:visited {
 	position: absolute;
 	top: 0;
 	left: 0;
-	width: 250px;
 	height: 0;
 	font-size: 1.8em;
 	font-weight: 600;
@@ -323,7 +379,7 @@ a:visited {
 	color: #565C5C;
 	background: #fff;
 	overflow: hidden;
-	
+	width: 100%;
 	-webkit-transition: all 0.3s ease;
 	-moz-transition: all 0.3s ease;
 	-ms-transition: all 0.3s ease;
@@ -336,7 +392,7 @@ a:visited {
 	position: absolute;
 	bottom: -0;
 	left: 0;
-	width: 250px;
+	width: 100%;
 	height: 0;
 	font-size: 1.1em;
 	font-weight: 400;
@@ -360,14 +416,47 @@ a:visited {
 	bottom: 0;
 	height: 125px;
 	padding: 10px;
-	width: 230px;
 }
+
+
+@media screen and (max-width: 992px) {
+	
+	.caption::before {
+		font-size: 1.2em;	
+	}
+	
+	.caption::after {
+		font-size: .8em;	
+	}
+		
+}
+
+@media screen and (max-width: 561px) {
+	
+	.caption::before {
+		display: none;
+	}
+	
+	.caption::after {
+		display: none;
+	}
+	
+	.galleryItem a {
+		border-width: 1px;
+	}
+		
+}
+
 /* Contact */
 
 #contact_sec{
 	background-image:url('../images/bg.jpg');
 	color: #fff;
 	padding-top: 100px;
+}
+
+#contact_sec .container {
+	text-align: center;
 }
 
 #contact_sec h1 {
@@ -378,6 +467,14 @@ a:visited {
     text-shadow: 2px 2px 3px rgba(255, 255, 255, 0.1);
     margin-top: 0px;
     letter-spacing: 2px;
+}
+
+#contact_sec h2 {
+	font-size: 1.7em;
+}
+
+#contact_sec a {
+	color: #D18080;
 }
 
 #form-main :hover,
@@ -403,9 +500,8 @@ label:hover {
 }
 
 .contact-form {
-    position: relative;
+	display:inline-block;
 	padding: 40px;
-	float: left;
 	margin-bottom: 40px;
 	width: 400px;
 	height: auto;
@@ -413,6 +509,8 @@ label:hover {
 	box-shadow: 0 0 10px 0 rgba(0,0,0,0.8);
 	color: #4F4E4C;
 	background-color: #F7EFDF;
+	margin-left: auto;
+	margin-right: auto;
 }
 
 .contact-form h2 {
@@ -612,28 +710,6 @@ input.send:focus {
 /* Mobile */
 @media screen and (max-width: 480px) {
 
-#logo {
-	width: 100%;
-	text-align: center;
-}
-
-#nav {
-	width:100%;
-	margin:5px 0;
-}
-
-.navigation{
-	width: 100%;
-	float: left;
-	list-style: none;
-	margin: 0;
-	padding:0;
-}
-
-.navigation li{
-	float: left;
-	width:25%;
-}
 
 .slide{
 	background-attachment: fixed;
