--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,11 @@ body {
 img {
 	max-width: 100%;
 }
+
+a:focus {
+   outline: 0;
+}
+
 a:link {
 	color: #D18080;
 	text-decoration: none;
@@ -33,6 +38,16 @@ ul {
 
 .center {
 	margin-right:auto; margin-left:auto;
+}
+
+::selection {
+	background: #E8E8E8;
+	color: #A20A06;
+}
+
+::-moz-selection {
+	background: #E8E8E8;
+	color: #A20A06;
 }
 
 
