--- a/css/style.css
+++ b/css/style.css
@@ -225,6 +225,15 @@ box-shadow:         0px 3px 3px 0px rgba(50, 50, 50, 0.75);
 	z-index: 4;
 	padding: 0px;
 }
+
+#desc .top-flourish{
+	margin-bottom: 10px;
+}
+
+#desc .bottom-flourish {
+	margin-top: 10px;
+}
+
 #desc h1 {
 	font-size: 4em;
 	font-family: "Hoefler Text", "Baskerville old face", Garamond, "Times New Roman", serif;
@@ -369,6 +378,7 @@ box-shadow:         0px 3px 3px 0px rgba(50, 50, 50, 0.75);
 	z-index: 2;
 	text-align: center;
 }
+
 #gallery h1 {
 	font-size: 3.8em;
 	letter-spacing: 2px;
