--- a/css/style.css
+++ b/css/style.css
@@ -5,12 +5,17 @@ html {
 }
 
 body {
-	font-family: 'Open Sans', sans-serif;
+	font-family: 'Baumans', cursive;
 	font-weight: 400;
 	font-size: 1em;
 	color: #8a8683;
 	background-color:#ffffff;
 }
+
+h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
+	font-family: 'Baumans', cursive;
+}
+
 img {
 	max-width: 100%;
 }
@@ -203,7 +208,6 @@ box-shadow:         0px 3px 3px 0px rgba(50, 50, 50, 0.75);
 	font-weight: 400;
 	margin-left: 40px;
 	text-align: left;
-	font-family: "Hoefler Text", "Baskerville old face", Garamond, "Times New Roman", serif;
 }
 
 #welcome h3 {
@@ -342,7 +346,6 @@ box-shadow:         0px 3px 3px 0px rgba(50, 50, 50, 0.75);
 
 .serviceItem p {
 	margin-top: 12px;
-	font-family: "Segoe UI", Frutiger, "Frutiger Linotype", "Dejavu Sans", "Helvetica Neue", Arial, sans-serif;
 }
 
 @media screen and (max-width: 656px) {
