--- a/css/style.css
+++ b/css/style.css
@@ -357,6 +357,7 @@ font-family: 'Alice', serif;
 	background-color: #FFF;
 	border-radius: 0 15px;
     box-shadow: -3px -3px 0 3px #999999, 3px 3px 0 3px #333333;
+    height: 360px;
 }
 
 .serviceItem h3{
@@ -378,7 +379,7 @@ font-family: 'Alice', serif;
 	}
 }
 
-@media screen and (max-width: 992px) {
+@media screen and (max-width: 991px) {
 	
 	#services {
 		padding-top: 50px;
@@ -391,7 +392,11 @@ font-family: 'Alice', serif;
 	
 	#services #are .right, #services #are .left {
 		display: none;
-	} 
+	}
+	
+	.serviceItem div {
+	    height: auto;
+	}
 }
 
 /* Gallery */
