--- a/css/style.css
+++ b/css/style.css
@@ -335,6 +335,7 @@ box-shadow:         0px 3px 3px 0px rgba(50, 50, 50, 0.75);
 	background-color: #FFF;
 	border-radius: 0 15px;
     box-shadow: -3px -3px 0 3px #999999, 3px 3px 0 3px #333333;
+    height: 360px;
 }
 
 .serviceItem h3{
@@ -355,7 +356,7 @@ box-shadow:         0px 3px 3px 0px rgba(50, 50, 50, 0.75);
 	}
 }
 
-@media screen and (max-width: 992px) {
+@media screen and (max-width: 991px) {
 	
 	#services {
 		padding-top: 50px;
@@ -369,6 +370,10 @@ box-shadow:         0px 3px 3px 0px rgba(50, 50, 50, 0.75);
 	#services #are .right, #services #are .left {
 		display: none;
 	} 
+	
+	.serviceItem div {
+	    height: auto;
+	}
 }
 
 /* Gallery */
